adjust project layout && code refactor

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
 .idea
 .DS_Store
+*.log
+my.pid
+
+venv/
+
 *.pyc
 __pycache__
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
